removed fixed width property on choosing categories, so no text overflow

--- a/assets/css/customize.css
+++ b/assets/css/customize.css
@@ -81,9 +81,9 @@ body { padding-top: 70px; }
   font-size: 16px;
 }
 
-.insertCategory {
+/*.insertCategory {
   width: 120px;
-}
+}*/
 
 .categories-heading{
   font-weight: bold;
